--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "pg": "^8.7.3",
     "puppeteer": "^13.5.2"
   },
   "devDependencies": {
